[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langlang"
version = "0.1.0"
description = "A comprehensive framework for working with Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/langlang"
Issues = "https://github.com/yourusername/langlang/issues"

[project.dependencies]
langchain = "^0.1.0"
langgraph = "^0.0.10"
transformers = "^4.36.0"
openai = "^1.12.0"
anthropic = "^0.18.1"
llama-index = "^0.9.40"
opik = "^0.1.0"
torch = "^2.2.0"
sentence-transformers = "^2.2.2"
pydantic = "^2.6.0"
tiktoken = "^0.6.0" 